--- a/4.React_render、props、jsX.md
+++ b/4.React_render、props、jsX.md
@@ -52,7 +52,7 @@ ReactDOM.render(
 
 `this.props.children` 的值有三种可能：如果当前组件没有子节点，它就是 `undefined` ;如果有一个子节点，数据类型是 `object` ；如果有多个子节点，数据类型就是 `array`
 
-## Props 验证
+## PropType 验证
 
 **React.PropTypes 在 React v15.5 版本后已经移到了** **prop-types** **库。**
 
@@ -92,7 +92,7 @@ ReactDOM.render(
 
 # this.state
 
-组件免不了要与用户互动，React 的一大创新，就是将组件看成是一个状态机，一开始有一个初始状态，然后用户互动，导致状态变化，从而触发重新渲染 UI 
+组件免不了要与用户互动，React 的一大创新，就是将组件看成是一个状态机，一开始有一个初始状态，然后用户互动，导致状态变化，从而触发重新渲染 UI ,组件内部的状态
 
 由于 `this.props` 和 `this.state` 都用于描述组件的特性，可能会产生混淆。一个简单的区分方法是，`this.props` 表示那些一旦定义，就不再改变的特性，而 `this.state` 是会随着用户互动而产生变化的特性
 
