--- a/5.React_组件.md
+++ b/5.React_组件.md
@@ -22,3 +22,28 @@ class Welcome extends React.Component {
 注意，原生 HTML 元素名以小写字母开头，而自定义的 React 类名以大写字母开头，比如 HelloMessage 不能写成 helloMessage。除此之外还需要注意组件内只能包含一个顶层标签，否则也会报错。
 ```
 
+## [受控组件](https://zh-hans.reactjs.org/docs/forms.html#controlled-components) vs [非受控组件](https://zh-hans.reactjs.org/docs/uncontrolled-components.html)
+
+### React 有两种不同的方式来处理表单输入
+
+- 如果一个 input 表单元素的值是由 React 控制，就其称为*受控组件*。当用户将数据输入到受控组件时，会触发修改状态的事件处理器，这时由你的代码来决定此输入是否有效（如果有效就使用更新后的值重新渲染）。如果不重新渲染，则表单元素将保持不变。
+
+- 一个*非受控组件*，就像是运行在 React 体系之外的表单元素。当用户将数据输入到表单字段（例如 input，dropdown 等）时，React 不需要做任何事情就可以映射更新后的信息。然而，这也意味着，你无法强制给这个表单字段设置一个特定值。
+
+# 高阶组件
+
+高阶组件（HOC）是React中用于复用组件逻辑的一种高级技巧.HOC自身不是React API的一部分，它是一种基于React的组合特性而形成的设计模式。
+
+**高阶组件是参数为组件，返回值为新组件的函数。**
+
+```
+const EnhancedComponent = higherOrderComponent(WrappedComponent);
+```
+
+### 设计模式 
+
+开发过程中的经验，问题总结出来的
+
+**四人帮**
+
+94年 面向对象软件设计基础
