feat: react-note

--- a/2.React_super.md
+++ b/2.React_super.md
@@ -31,6 +31,6 @@ ES5中new到底做了些啥？
 
 - 如果你在constructor中要使用this.props,就必须给super加参数：super(props)；
 
-  （无论有没有constructor，在render中this.props都是可以使用的，这是React自动附带的；）
+  （无论有没有constructor，在render中this.props都是可以使用的，这是React自动附带的）
 
 - 如果没用到constructor,是可以不写的；React会默认添加一个空的constructor。
