--- a/4.React_render、props、jsX.md
+++ b/4.React_render、props、jsX.md
@@ -62,33 +62,33 @@ ReactDOM.render(
 
 - Props 验证使用 **propTypes**，它可以保证我们的应用组件被正确使用，React.PropTypes 提供很多验证器 (validator) 来验证传入数据是否有效。当向 props 传入无效数据时，JavaScript 控制台会抛出警告。
 
+  ```js
+  // TodoHeader.propTypes = {
+  //     title: PropTypes.string.isRequired,
+  //     subtitle: PropTypes.number,
+  //     children: PropTypes.any
+  // }
+  ```
+
 ## 获取真实的DOM节点 ref
 
 - 组件并不是真实的 DOM 节点，而是存在于内存之中的一种数据结构，叫做虚拟 DOM （virtual DOM）。只有当它插入文档以后，才会变成真实的 DOM 。根据 React 的设计，所有的 DOM 变动，都先在虚拟 DOM 上发生，然后再将实际发生变动的部分，反映在真实 DOM上，这种算法叫做 [DOM diff](http://calendar.perfplanet.com/2013/diff/) ，它可以极大提高网页的性能表现。
 
 ```js
+import React, { Component, createRef } from 'react'
 
-var MyComponent = React.createClass({
-  handleClick: function() {
-    this.refs.myTextInput.focus();
-  },
-  render: function() {
-    return (
-      <div>
-        <input type="text" ref="myTextInput" />
-        <input type="button" value="Focus the text input" onClick={this.handleClick} />
-      </div>
-    );
-  }
-});
+myRef = createRef() // 创建一个myRef	
 
-ReactDOM.render(
-  <MyComponent />,
-  document.getElementById('example')
-);
+<div ref={this.myRef} /> // 把ref属性附加到React元素
+    
+this.myRef.current.focus() // 访问Refs要用current
 ```
 
 `this.refs.[refName]` 属性获取的是真实 DOM ，所以必须等到虚拟 DOM 插入文档以后，才能使用这个属性，否则会报错。上面代码中，通过为组件指定 `Click` 事件的回调函数，确保了只有等到真实 DOM 发生 `Click` 事件之后，才会读取 `this.refs.[refName]` 属性。
+
+
+
+
 
 # this.state
 
@@ -101,3 +101,4 @@ ReactDOM.render(
 - `this.setState` 方法就修改状态值，每次修改以后，自动调用 `this.render` 方法，再次渲染组件。修改状态数据，需要显式调用 setState() 方法来修改
 
 - this.setState是异步更新状态
+
