--- a/5.React_组件.md
+++ b/5.React_组件.md
@@ -32,12 +32,22 @@ class Welcome extends React.Component {
 
 # 高阶组件
 
-高阶组件（HOC）是React中用于复用组件逻辑的一种高级技巧.HOC自身不是React API的一部分，它是一种基于React的组合特性而形成的设计模式。
+高阶组件（**HOC**）是React中用于复用组件逻辑的一种高级技巧.HOC自身不是React API的一部分，它是一种基于React的组合特性而形成的设计模式。
 
 **高阶组件是参数为组件，返回值为新组件的函数。**
 
 ```
 const EnhancedComponent = higherOrderComponent(WrappedComponent);
+```
+
+```js
+function parent (a) {
+    function child (b) {
+		return a + b
+    }
+    return child
+}
+parent(1)(9) // 10
 ```
 
 ### 设计模式 
