--- a/6.React_context.md
+++ b/6.React_context.md
@@ -24,3 +24,101 @@ const MyContext = React.createContext(defaultValue);
 
 ### context.Consumer
 
+```js
+import React, { Component, createContext } from 'react'
+import { render } from 'react-dom'
+
+// Context 相当于是全局的共享对象
+// 创建 Context，解构出 Provider 与 Consumer
+// 保存全局的共享资源，使用 Provider
+// 获取全局的共享资源，使用 Consumer
+const {
+    Provider,
+    Consumer: CounterConsumer
+} = createContext()
+
+// 自定义 Provider 组件 
+class CounterProvider extends Component {
+    constructor () {
+        super()
+        this.state = {
+            count: 100
+        }
+    }
+
+    increase = () => {
+        this.setState({
+            count: this.state.count + 1
+        })
+    }
+
+    decrease = () => {
+        this.setState({
+            count: this.state.count - 1
+        })
+    }
+
+    render () {
+        // 将需要全局共享的资源作为 <Provider> 元素的 value 属性值
+        return (
+            <Provider value={{
+                count: this.state.count,
+                increase: this.increase,
+                decrease: this.decrease
+            }}>
+                {this.props.children}
+            </Provider>
+        )
+    }
+}
+
+class Counter extends Component {
+    render () {
+        return (
+            <CounterConsumer>
+                {
+                    // 函数参数就是在 Provider 的 value 中共享的资源
+                    (arg) => {
+                        const {count} = arg
+                        console.log(arg)
+                        return (
+                            <>
+                                <CounterButton type="decrement">-</CounterButton>
+                                <span>{count}</span>
+                                <CounterButton type="increment">+</CounterButton>
+                            </>
+                        )
+                    }
+                }
+            </CounterConsumer>
+        )
+    }
+}
+
+class CounterButton extends Component {
+    render () {
+        return (
+            <CounterConsumer>
+                {
+                    ({increase, decrease}) => {
+                        const handler = this.props.type === 'decrement' ? decrease : increase
+                        return (
+                            <button onClick={handler}>
+                                {this.props.children}
+                            </button>
+                        )
+                    }
+                }
+            </CounterConsumer>
+        )
+    }
+}
+
+render(
+    <CounterProvider>
+        <Counter />
+    </CounterProvider>,
+    document.querySelector('#root')
+)
+```
+
