--- a/7.React_生命周期.md
+++ b/7.React_生命周期.md
@@ -13,7 +13,12 @@
 
 ### static getDerivedStateFromProps()
 
+```js
+static getDerivedStateFromProps(props, state)
+```
+
 - 根据父组件的属性定义state
+- 会在调用 render 方法之前调用，并且在初始挂载及后续更新时都会被调用。它应返回一个对象来更新 state，如果返回 null 则不更新任何内容。
 
 ### render()
 
@@ -22,16 +27,27 @@
 ### componentDidMeunt()
 
 - 组件已经被挂载上去，DOM树已经创建完成
--  会在组件挂载后（插入 DOM 树中）立即调用。
+- 会在组件挂载后（插入 DOM 树中）立即调用。
 
--  会在组件挂载后（插入 DOM 树中）立即调用。
 
 ### 更新
 
 ### componentDidUpdata()
 
 - 会在更新后会被立即调用。首次渲染不会执行此方法。
+
 - 当组件更新后，可以在此处对 DOM 进行操作。如果你对更新前后的 props 进行了比较，也可以选择在此处进行网络请求。
+
+  ```js
+  componentDidUpdate(prevProps) {
+    // 典型用法（不要忘记比较 props）：
+    if (this.props.userID !== prevProps.userID) {
+      this.fetchData(this.props.userID); // prevProps更改的时候发送网络请求	
+    }
+  }
+  ```
+
+  
 
 ### shouldComponentUpdate()
 
@@ -39,7 +55,14 @@
 
 - 当 props 或 state 发生变化时，`shouldComponentUpdate()` 会在渲染执行之前被调用。返回值默认为 true
 
--  `shouldComponentUpdate()` 返回 `false`，则不会调用 
+- `shouldComponentUpdate()` 返回 `false`，则不会调用 
+
+  ```js
+  shouldComponentUpdate (props) {
+      return props.isCompleted !== this.props.isCompleted
+      // 返回为true则会调用render()
+  }
+  ```
 
 ### 卸载
 
