--- a/面试题总结.md
+++ b/面试题总结.md
@@ -16,9 +16,20 @@
 
 ### export 和 export **default**
 
+# HTML中的href和src有什么区别？
+
 1. export与export default均可用于导出常量、函数、文件、模块等
 2. 在一个文件或模块中，export、import可以有多个，export default仅有一个
 
 3. 通过export方式导出，在导入时要加{ }，export default则不需要
 
 4. export能直接导出变量表达式，export default不行。
+
+  src用于替换当前元素，href用于在当前文档和引用资源之间确立联系。
+src是source的缩写，指向外部资源的位置，指向的内容将会嵌入到文档中当前标签所在位置；在请求src资源时会将其指向的资源下载并应用到文档内，例如js脚本，img图片和frame等元素。
+<script src ="js.js"></script>
+当浏览器解析到该元素时，会暂停其他资源的下载和处理，直到将该资源加载、编译、执行完毕，图片和框架等元素也如此，类似于将所指向资源嵌入当前标签内。这也是为什么将js脚本放在底部而不是头部。
+
+href是Hypertext Reference的缩写，指向网络资源所在位置，建立和当前元素（锚点）或当前文档（链接）之间的链接，如果我们在文档中添加
+<link href="common.css" rel="stylesheet"/>
+那么浏览器会识别该文档为css文件，就会并行下载资源并且不会停止对当前文档的处理。这也是为什么建议使用link方式来加载css，而不是使用@import方式。  
