--- a/10.Ant.design.md
+++ b/10.Ant.design.md
@@ -42,5 +42,43 @@ import zhCN from 'antd/es/locale-provider/zh_CN'
 </LocaleProvider>
 ```
 
-7. 将`package.json` 里面的自定义指令 `react-scripts` 改成 `react-app-rewired`
+7. 将`package.json` 里面的自定义指令 `react-scripts` 改成 react-app-rewired
 
+8. 定制主题
+
+```js
+const { override, fixBabelImports, addLessLoader } = require('customize-cra'); 
+const modifyVars = require('./theme') // 引入 addLessLoader 和使用 require引入 theme
+module.exports = override(
+  fixBabelImports('import', {
+    libraryName: 'antd',
+    libraryDirectory: 'es',
+    style: true // 将 'css' 改成 true
+  }),
+  addLessLoader({
+    javascriptEnabled: true,
+    modifyVars
+  })
+)
+```
+
+```js
+// theme.js
+module.exports = {
+  '@primary-color': '#1890ff', // 全局主色
+  '@link-color': '#1890ff', // 链接色
+  '@success-color': '#52c41a', // 成功色
+  '@warning-color': '#faad14', // 警告色
+  '@error-color': '#f5222d', // 错误色
+  '@font-size-base': '14px', // 主字号
+  '@heading-color': 'rgba(0, 0, 0, 0.85)', // 标题色
+  '@text-color': 'rgba(0, 0, 0, 0.65)', // 主文本色
+  '@text-color-secondary ': 'rgba(0, 0, 0, .45)', // 次文本色
+  '@disabled-color ': 'rgba(0, 0, 0, .25)', // 失效色
+  '@border-radius-base': '4px', // 组件/浮层圆角
+  '@border-color-base': '#d9d9d9', // 边框色
+  '@box-shadow-base': '0 2px 8px rgba(0, 0, 0, 0.15)', // 浮层阴影
+} 
+```
+
+需安装less 和 less-loader 
