--- a/面试题总结.md
+++ b/面试题总结.md
@@ -1,5 +1,3 @@
-# [exports、module.exports和export、export default到底是咋回事](https://segmentfault.com/a/1190000010426778)
-
 `equire`: node 和 es6 都支持的引入
 
 `export / import` : 只有es6 支持的导出引入
@@ -14,19 +12,18 @@
 
 区分他们之间的区别就是 `exports` 只是 `module.exports`的引用，辅助后者添加内容用的。
 
-### export 和 export **default**
-
-# HTML中的href和src有什么区别？
+# export 和 export **default**
 
 1. export与export default均可用于导出常量、函数、文件、模块等
 2. 在一个文件或模块中，export、import可以有多个，export default仅有一个
-
 3. 通过export方式导出，在导入时要加{ }，export default则不需要
-
 4. export能直接导出变量表达式，export default不行。
+
+# HTML中的href和src有什么区别？
 
   src用于替换当前元素，href用于在当前文档和引用资源之间确立联系。
 src是source的缩写，指向外部资源的位置，指向的内容将会嵌入到文档中当前标签所在位置；在请求src资源时会将其指向的资源下载并应用到文档内，例如js脚本，img图片和frame等元素。
+
 <script src ="js.js"></script>
 当浏览器解析到该元素时，会暂停其他资源的下载和处理，直到将该资源加载、编译、执行完毕，图片和框架等元素也如此，类似于将所指向资源嵌入当前标签内。这也是为什么将js脚本放在底部而不是头部。
 
@@ -34,6 +31,124 @@ href是Hypertext Reference的缩写，指向网络资源所在位置，建立和
 <link href="common.css" rel="stylesheet"/>
 那么浏览器会识别该文档为css文件，就会并行下载资源并且不会停止对当前文档的处理。这也是为什么建议使用link方式来加载css，而不是使用@import方式。  
 
+# 原型对象
+
    每创建一个函数都会有一个prototype属性，这个属性是一个指针，指向一个对象（通过该构造函数创建实例对象的原型对象）。原型对象是包含特定类型的所有实例共享的属性和方法。原型对象的好处是，可以让所有实例对象共享它所包含的属性和方法。
+
         第一块中有提到，原型对象属于普通对象。Function.prototype是个例外，它是原型对象，却又是函数对象，作为一个函数对象，它又没有prototype属性。
---------------------- 
+# $set
+
+Vue 不允许在已经创建的实例上动态添加新的根级响应式属性 (root-level reactive property)。然而它可以使用 Vue.set(object, key, value) 方法将响应属性添加到嵌套的对象上：
+
+Vue.set(vm.obj, 'e', 0)
+ 您还可以使用 vm.$set 实例方法，这也是全局 Vue.set 方法的别名：
+
+this.$set(this.obj,'e',02)
+
+有时你想向已有对象上添加一些属性，例如使用 Object.assign() 或 _.extend() 方法来添加属性。但是，添加到对象上的新属性不会触发更新。在这种情况下可以创建一个新的对象，让它包含原对象的属性和新的属性：
+
+// 代替 `Object.assign(this.obj, { a: 1, e: 2 })`
+ this.obj= Object.assign({}, this.obj, { a: 1, e: 2 })
+
+# key
+
+**需要使用key来给每个节点做一个唯一标识，Diff算法就可以正确的识别此节点，找到正确的位置区插入新的节点。**
+
+**key的作用主要是为了高效的更新虚拟DOM**。
+
+# 防抖/节流
+
+##### 防抖（debounce） 
+
+- **所谓防抖，就是指触发事件后在 n 秒内函数只能执行一次，如果在 n 秒内又触发了事件，则会重新计算函数执行时间。**
+- **非立即执行版的意思是触发事件后函数不会立即执行，而是在 n 秒后执行，如果在 n 秒内又触发了事件，则会重新计算函数执行时间。**
+- **立即执行版的意思是触发事件后函数会立即执行，然后 n 秒内不触发事件才能继续执行函数的效果。**
+
+```js
+// 非立即执行版
+function debounce(func, wait) {
+    let timeout;
+    return function () {
+        let context = this;
+        let args = arguments;
+
+        if (timeout) clearTimeout(timeout);
+        
+        timeout = setTimeout(() => {
+            func.apply(context, args)
+        }, wait);
+    }
+}
+```
+
+```js
+content.onmousemove = debounce(count, 1000)
+```
+
+```js
+// 立即执行版
+function debounce(func,wait) {
+    let timeout;
+    return function () {
+        let context = this;
+        let args = arguments;
+
+        if (timeout) clearTimeout(timeout);
+
+        let callNow = !timeout;
+        timeout = setTimeout(() => {
+            timeout = null;
+        }, wait)
+
+        if (callNow) func.apply(context, args)
+    }
+}
+```
+
+
+
+**节流（throttle）**
+
+- **所谓节流，就是指连续触发事件但是在 n 秒中只执行一次函数。节流会稀释函数的执行频率。**
+
+- **对于节流，一般有两种方式可以实现，分别是时间戳版和定时器版。**
+- **时间戳版的函数触发是在时间段内开始的时候，而定时器版的函数触发是在时间段内结束的时候。**
+
+```js
+// 时间戳
+function throttle(func, wait) {
+    let previous = 0
+    return function() {
+        let now = Date.now()
+        let context = this
+        let args = arguments
+        if (now - previous > wait) {
+            func.apply(context, args)
+            previous = now
+        }
+    }
+}
+```
+
+```js
+content.onmousemove = throttle(count,1000)
+```
+
+```js
+// 定时器
+function throttle(func, wait) {
+    let timeout
+    return function() {
+        let context = this
+        let args = arguments
+        if (!timeout) {
+            timeout = setTimeout(() => {
+                timeout = null
+                func.apply(context, args)
+            }, wait)
+        }
+
+    }
+}
+```
+
